--- a/WebTech/playground/style.css
+++ b/WebTech/playground/style.css
@@ -114,7 +114,7 @@ button {
 
 button:hover {
     background-color: var(--primary-hover);
-    transform: translateY(-1px);
+    animation: myAnims 2s ease 0s 1 normal forwards;
 }
 
 table {
@@ -205,4 +205,32 @@ td {
 
 #customer-info-form button:hover {
     background-color: var(--primary-hover);
+}
+
+@keyframes myAnim {
+	0%,
+	100% {
+		transform: translateY(0) rotate(0);
+		transform-origin: 50% 50%;
+	}
+
+	15% {
+		transform: translateY(-30px) rotate(-6deg);
+	}
+
+	30% {
+		transform: translateY(15px) rotate(6deg);
+	}
+
+	45% {
+		transform: translateY(-15px) rotate(-3.6deg);
+	}
+
+	60% {
+		transform: translateY(9px) rotate(2.4deg);
+	}
+
+	75% {
+		transform: translateY(-6px) rotate(-1.2deg);
+	}
 }
